[package]
name = "prusacam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.9"
rppal = "0.17.1"
rscam = {version = "0.5.5", features = ["no_wrapper"]}
serde = {version ="1.0.197",features = ["derive"]}
serde_yaml = "0.9.32"
ureq = {version = "2.9.6", features = ["json"]}

[profile.release]
debug = 0